--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Udacity Cloud DevOps-Udacity Capstone project</title>
-</head>
-<body>
-	<p>Hello World ! Kuldeep Rana Udacity Capstone project</p>
-</body>
+<head><title>Udacity Cloud DevOps-Udacity Capstone project</title></head>
+<body><p><center><b>Hello World ! Kuldeep Rana Udacity Capstone project</b></center></p></body>
 </html>
